crates/service/tests/references/snapshots/features__references__global__global_def_ident_idx-2.snap
---
source: crates/service/tests/references/global.rs
expression: exclude_decl
---
[
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 22
      },
      "end": {
        "line": 3,
        "character": 23
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 37
      },
      "end": {
        "line": 3,
        "character": 44
      }
    }
  },
  {
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 4,
        "character": 23
      },
      "end": {
        "line": 4,
        "character": 30
      }
    }
  }
]
